// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries reducer should init correctly 1`] = `
Object {
  "a": Object {
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": null,
  },
}
`;

exports[`queries reducer updates should correctly update 1`] = `
Object {
  "a": Object {
    "count": 2,
    "data": Array [
      "12345",
      "67890",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
}
`;

exports[`queries reducer updates should correctly update a query with a $gt: null selector 1`] = `
Object {
  "a": Object {
    "count": 1,
    "data": Array [
      "54321",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
  "b": Object {
    "count": 1,
    "data": Array [
      "54321",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": Object {
        "_id": Object {
          "$gt": null,
        },
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": 1337,
  },
}
`;

exports[`queries reducer updates should correctly update a query with a selector 1`] = `
Object {
  "a": Object {
    "count": 1,
    "data": Array [
      "54321",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
  "b": Object {
    "count": 1,
    "data": Array [
      "54321",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": 1337,
  },
}
`;

exports[`queries reducer updates should correctly update two queries 1`] = `
Object {
  "a": Object {
    "count": 2,
    "data": Array [
      "12345",
      "67890",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
  "b": Object {
    "count": 2,
    "data": Array [
      "12345",
      "67890",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": 1337,
  },
}
`;

exports[`queries reducer updates should not crash if data is null 1`] = `
Object {
  "a": Object {
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": null,
  },
  "b": Object {
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": "not-existing-doc",
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": null,
  },
}
`;

exports[`queries reducer updates should not update a query not concerned even with a selector 1`] = `
Object {
  "a": Object {
    "count": 1,
    "data": Array [
      "54321",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
  },
  "b": Object {
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": false,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loading",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastFetch": null,
    "lastUpdate": null,
  },
}
`;
